findbugs-reported bug squashing; 959 bugs left (findbugs 1.3.9)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1036179 13f79535-47bb-0310-9956-ffa450edef68